fix for brs on mobile

--- a/resources/assets/app.css
+++ b/resources/assets/app.css
@@ -151,4 +151,7 @@
   :root {
     --width-content: unset;
   }
+  segment-section [slot="title"] br {
+    display: none;
+  }
 }
